export enum OrderStatus {
  Pending = 'Pending',
  Confirmed = 'Confirmed',
  Shipped = 'Shipped',
  Delivering = 'Delivering',
  Complete = 'Completed',
  Canceled = 'Canceled,'
}
