enum UserStatus {
  Active,
  Canceled,
}

export default UserStatus;
